--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>souky-dynamic-form</title>
+    <title>souky-vue-el-compoments</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but souky-dynamic-form doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but souky-vue-el-compoments doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
